<resources>
    <string name="app_name">My Application</string>
    <string name="signup">SignUp</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Sign-up</string>
</resources>
